# DrEngine

./: .gitignore  CMakeLists.txt
DrEngine/: CMakeLists.txt
DrEngine/assets/configs/: keybinds.xml  settings.xml
DrEngine/libs/rapidXML/: CMakeLists.txt
DrEngine/libs/rapidXML/include/: rapidxml_iterators.hpp
DrEngine/src/: Engine.cpp  Engine.h  EngineManager.cpp  EngineManager.h  main.cpp
DrEngine/src/Assets/: AssetFactory.h  IAssetloader.h  SpriteLoader.h  XmlLoader.h  config.h
DrEngine/src/ECS/: Component.h  Entity.cpp  Entity.h
DrEngine/src/Managers/: AssetManager.cpp  AssetManager.h  EngineManager.cpp  EngineManager.h  EntityManager.cpp  EntityManager.h  InputManager.cpp  InputManager.h  RenderManager.cpp  RenderManager.h
DrEngine/src/Utils/Events/Input/: InputEvents.h
include/: Component.hpp  Engine.hpp  Entity.hpp  ResourceManager.hpp
include/Components/: Sprite.hpp  Transform.hpp
include/Systems/: RenderSystem.hpp
src/: Engine.cpp  Main.cpp
src/Systems/: RenderSystem.cpp
